Bucket4J and swagger